hphp/test/zend/good/Zend/tests/clone_001.php.expectf

Fatal error: clone called on non-object in %s/clone_001.php on line 3
